fix x axis overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,6 +25,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 .react-tel-input .selected-flag {
   border-radius: 8px 0 0 8px !important;
 }
